--- a/arch/arm/configs/lineage_fame_defconfig
+++ b/arch/arm/configs/lineage_fame_defconfig
@@ -390,7 +390,41 @@ CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 CONFIG_USB_VIDEO_CLASS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_MSM_CAMERA=y
 # CONFIG_MSM_CAMERA is not set
+# CONFIG_MSM_CAMERA_DEBUG is not set
+CONFIG_MSM_CAMERA_V4L2=y
+# CONFIG_IMX074 is not set
+# CONFIG_OV5647 is not set
+# CONFIG_MT9M114 is not set
+# CONFIG_IMX074_ACT is not set
+# CONFIG_DW9712_ACT is not set
+# CONFIG_MSM_CAMERA_FLASH_SC628A is not set
+# CONFIG_MSM_CAMERA_FLASH_TPS61310 is not set
+# CONFIG_IMX072 is not set
+# CONFIG_IMX072 is not set
+# CONFIG_OV2720 is not set
+# CONFIG_OV8825 is not set
+# CONFIG_IMX135 is not set
+# CONFIG_OV9724 is not set
+# CONFIG_MSM_CAMERA_FLASH is not set
+CONFIG_MSM_CAMERA_SENSOR=y
+CONFIG_MSM_ACTUATOR=y
+CONFIG_MSM_EEPROM=y
+CONFIG_MSM_GEMINI=y
+CONFIG_MSM_MERCURY=y
+# CONFIG_MSM_CAM_IRQ_ROUTER is not set
+# CONFIG_MSM_CPP is not set
+# CONFIG_MSM_CCI is not set
+CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
+CONFIG_MSM_CSI20_HEADER=y
+# CONFIG_MSM_CSI30_HEADER is not set
+# CONFIG_MSM_CSIPHY is not set
+# CONFIG_MSM_CSID is not set
+# CONFIG_MSM_CSI2_REGISTER is not set
+# CONFIG_MSM_ISPIF is not set
+# CONFIG_S5K3L1YX is not set
+# CONFIG_IMX091 is not set
 CONFIG_MSM_WFD=y
 CONFIG_RADIO_IRIS=y
 CONFIG_RADIO_IRIS_TRANSPORT=y
